# argo-watcher-mcp

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build-and-publish.yml  run-tests.yml
scripts/: README.md  ai-chat.py  requirements.txt  test.py
scripts/instructions/: process_deployments.md
src/: server.py
src/argo_watcher_mcp/: app.py  client.py  dependencies.py  health.py  main.py  tools.py
tests/: test_client.py  test_health.py  test_main.py  test_tools.py
